intTests/test_type_errors/err026.log.good
Loading file "err026.saw"
Error: err026.saw:3:9-5:2: do block must end with expression
FAILED
