intTests/test_type_errors/err026.saw
// Trigger the "do block must end with expression" message

let x = do {
   y <- llvm_assert {{ True }};
};
